--- a/package.json
+++ b/package.json
@@ -49,12 +49,14 @@
 		"apexcharts": "^4.1.0",
 		"apexsankey": "^1.1.2",
 		"apextree": "^1.3.0",
+		"axios": "^1.9.0",
 		"boxicons": "^2.1.4",
 		"clipboard": "^2.0.11",
 		"datatables.net": "^2.1.8",
 		"datatables.net-dt": "^2.1.8",
 		"dayjs": "^1.11.13",
 		"echarts": "^5.6.0",
+		"firebase": "^11.7.1",
 		"flatpickr": "^4.6.13",
 		"imask": "^7.6.1",
 		"img-comparison-slider": "^8.0.6",
@@ -68,9 +70,9 @@
 		"shiki": "^1.21.0",
 		"simplebar": "^5.3.6",
 		"sortablejs": "^1.15.6",
-		"svelte-datatable": "^2.0.1",
-		
+		"svelte-datatable": "^2.0.1",		
 		"svelte-i18n": "^4.0.1",
+		"svelte-persisted-store": "^0.11.0",
 		"swiper": "^11.1.14",
 		"tippy.js": "^6.3.7",
 		"vanilla-tilt": "^1.8.1",
